# biotech-accelerator

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  example_walkthrough.py  pyproject.toml  test_basic.py  test_full_pipeline.py
.claude/commands/: analyze-pdb.md  find-mutations.md  research.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
biotech_accelerator/: __init__.py  main.py  mcp_server.py
biotech_accelerator/adapters/: __init__.py  base.py  chembl_adapter.py  pdb_adapter.py  pubmed_adapter.py  uniprot_adapter.py
biotech_accelerator/agents/: __init__.py  state.py
biotech_accelerator/agents/nodes/: __init__.py  bio_literature.py  drug_binding.py  experiment_suggester.py  structure_analyst.py  synthesis.py
biotech_accelerator/analysis/: __init__.py  nma_wrapper.py
biotech_accelerator/config/: __init__.py  settings.py
biotech_accelerator/domain/: __init__.py  compound_models.py  protein_models.py
biotech_accelerator/graph/: __init__.py  biotech_graph.py
biotech_accelerator/ports/: __init__.py  compound.py  literature.py  sequence.py  structure.py
biotech_accelerator/utils/: __init__.py  cache.py  retry.py
demo/: index.html
demo/js/: main.js  pipeline.js  terminal.js
docs/: api.md
docs/css/: style.css
docs/diagrams/: architecture.d2  file-structure.d2  pipeline-flow.d2
docs/js/: data.js
examples/: run_examples.py
tests/: test_adapters.py  test_basic.py  test_full_pipeline.py  test_mcp_server.py  test_unit.py
