[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biotech-accelerator"
version = "0.1.0"
description = "Multi-agent AI system for biotech research that reads literature AND runs computational analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jay Hemnani" }
]
keywords = ["biotech", "AI", "multi-agent", "protein", "research", "langgraph"]

dependencies = [
    # Workflow orchestration
    "langgraph>=0.2.0",

    # MCP server (consumed by Claude Code and other MCP clients)
    "mcp>=1.0.0",

    # Molecular biology (from nobel-dataintelligence)
    "prody>=2.0",
    "biopython>=1.79",
    "rdkit>=2022.3.0",

    # Deep learning
    "torch>=2.0.0",
    "torch-geometric>=2.2.0",

    # Scientific computing
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",

    # HTTP/API
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",

    # Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.10.0",
]

[project.scripts]
biotech = "biotech_accelerator.main:main"
biotech-mcp = "biotech_accelerator.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["biotech_accelerator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit live external APIs (PubMed, PDB, UniProt, ChEMBL)",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["biotech_accelerator"]

[[tool.mypy.overrides]]
module = [
    "biotech_accelerator.agents.nodes.*",
    "biotech_accelerator.graph.*",
]
# Node agents currently accept plain dict state; TypedDict narrowing is deferred
# until the LLM rewrite lands (see plan Phase B).
disable_error_code = ["arg-type"]
